--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div id="aceomm"></div>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
