--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,15 @@
     <title></title>
   </head>
   <body>
-    <div id="test"></div>
+    <div id="aceomm"></div>
   </body>
 
   <script>
-  import Vue from 'vue';
-  import Test from './test';
+    import Vue from 'vue';
+    import Test from './test';
 
-  const app = new Vue(Test).$mount('#test');
+    const app = new Vue(Test).$mount('#aceomm');
 
-  app.text = "Electron Forge with Vue.js!";
-
+    app.text = "Electron Forge with Vue.js! boo";
   </script>
 </html>
