Sctructure changes, add a dummy ajax call

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,5 @@
   <body>
     <div id="aceomm"></div>
   </body>
-
-  <script>
-    import Vue from 'vue';
-    import Test from './test';
-
-    const app = new Vue(Test).$mount('#aceomm');
-
-    app.text = "Electron Forge with Vue.js! boo";
-  </script>
+  <script src="main.js"></script>
 </html>
