--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ACEOMM</title>
+    <link rel="stylesheet" href="style.scss" />
   </head>
   <body>
     <div id="aceomm"></div>
+    <script src="main.js"></script>
   </body>
-  <script src="main.js"></script>
 </html>
