--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>ACEOMM</title>
-    <link rel="stylesheet" href="style.scss" />
+    <link rel="stylesheet" href="scss/style.scss" />
   </head>
   <body>
     <div id="aceomm"></div>
